--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "QR generator app",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
